Sat Jul  2 22:05:03 BST 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	NEW_WORLD: Improved the handling of files which contain
				carriage returns

Thu Jun 30 15:51:54 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Honour LogClean
			Only syslog once when storing email in quarantine,
				reported by Panagiotis Christias, christias
				at gmail.com
			Log database reloads to the LogFile

Wed Jun 29 10:45:33 BST 2005 (trog)
-----------------------------------
  * libclamav: enable RAR SFX unpacking

Wed Jun 29 03:05:45 CEST 2005 (tk)
----------------------------------
  * libclamav: fix rar-sfx detection

Mon Jun 27 22:01:55 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Changed the default child_timeout to 5 minutes
			Keep a copy of the trie root in privdata
			Removed trylock/unlock code in clamfi_abort

Fri Jun 24 15:48:26 CEST 2005 (tk)
----------------------------------
  * libclamav: improve file type recognizer and add CL_TYPE_RARSFX

Thu Jun 23 22:52:43 CEST 2005 (tk)
----------------------------------
  * libclamav/mspack/qtmd.c: fix possible crash

Thu Jun 23 15:49:10 CEST 2005 (tk)
----------------------------------
  * clamd: revert the queue limit patch

Wed Jun 22 21:51:49 BST 2005 (njh)
----------------------------------
  * libclamav/pdf.c:	Remember to close a file that fails to parse. Fix by
				John Callaghan <jpc at msu.edu>

Wed Jun 22 20:12:54 CEST 2005 (tk)
----------------------------------
  * clamd/clamd.c, shared/output.c: improve output handling (Patch by Mark
				Pizzolato <clamav-devel*subscriptions.pizzolato.net>)

Wed Jun 22 17:52:08 CEST 2005 (tk)
----------------------------------
  * clamd: support operation of both TCP and Unix domain sockets simultaneously
	   Patch by Mark Pizzolato <clamav-devel*subscriptions.pizzolato.net>

Wed Jun 22 16:43:43 CEST 2005 (tk)
----------------------------------